# Python-ESXi-Utilities

./: .gitignore  MANIFEST.in  Makefile  changelog.md  pyproject.toml  setup.cfg
.github/workflows/: pr-validation.yml  workflow.yml
docs/: Makefile  index.rst
esxi_utils/: client.py  datastore.py
esxi_utils/firewall/: firewall.py
esxi_utils/util/connect/: cisco.py  panos.py
esxi_utils/vm/: virtualmachine.py
esxi_utils/vm/hardware/: __init__.py  device.py  serial_port.py
