[metadata]
name = esxi-utils
version = 3.22.1
author = The MITRE Corporation
description = A package that provides functions for interacting with an ESXi server and manipulating VMs/OVFs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mitre/Python-ESXi-Utilities
project_urls =
    Documentation = https://github.com/mitre/Python-ESXi-Utilities/blob/main/README.md
    Source = https://github.com/mitre/Python-ESXi-Utilities
    Issues = https://github.com/mitre/Python-ESXi-Utilities/issues
	Changelog = https://github.com/mitre/Python-ESXi-Utilities/changelog.md
license = Apache-2.0
license_files = LICENSE
keywords = esxi, vmware, vsphere, vcenter, pyvmomi, virtualization, hypervisor, ssh, paramiko, winrm, pywinrm, cisco, netmiko, network-automation, palo-alto, palo-alto-networks, panos, panorama, pan-os, panos-api, firewall, firewall-automation, devops, sysadmin, infrastructure-automation, datacenter, automation, remote-execution, configuration-management, orchestration, python-library, utilities
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
	fabric==3.2.2
	lxml==5.3.0
	netmiko==3.4.0
	opencv-python-headless==4.12.0.88
	pan-os-python==1.6.0
	paramiko==3.4.1
	python-dateutil==2.8.2
	pyvmomi==8.0.3.0.1
	pywinrm==0.4.3
	requests==2.32.5
	requests_ntlm==1.3.0
	setuptools==80.9.0
	textfsm==1.1.2
	vncdotool==1.0.0
include_package_data = True

[options.packages.find]
exclude = 
	docs*
	.azuredevops*

[options.package_data]
* = textfsm_templates/*
